==> Amaf14/nRF24l01/nrf/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

uint8_t RF24::spiTrans(uint8_t cmd) {

  uint8_t status;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);
  status = _SPI.transfer( cmd );
  //csn(HIGH);
  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();
  return status;
}

uint8_t RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
  uint8_t status;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);

  status = _SPI.transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
  while ( len-- ) {
    *buf++ = _SPI.transfer(0xff);
  }
  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();

  return status;
}

uint8_t RF24::read_register(uint8_t reg)
{
  uint8_t result;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);

  _SPI.transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
  result = _SPI.transfer(0xff);

  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();

  return result;
}

uint8_t RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
  uint8_t status;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);

  status = _SPI.transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
  while ( len-- )
    _SPI.transfer(*buf++);

  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();

  return status;
}

uint8_t RF24::write_register(uint8_t reg, uint8_t value)
{
  uint8_t status;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);

  status = _SPI.transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
  _SPI.transfer(value);

  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();

  return status;
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
  uint8_t status;
  uint8_t* current = reinterpret_cast<uint8_t*>(buf);

  if (data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);

  status = _SPI.transfer( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = _SPI.transfer(0xFF);
  }
  while ( blank_len-- ) {
    _SPI.transfer(0xff);
  }

  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();

  return status;
}

uint8_t RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
  uint8_t status;
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

  data_len = rf24_min(data_len, payload_size);
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  //csn(LOW);
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);

  status = _SPI.transfer( writeType );
  while ( data_len-- ) {
    _SPI.transfer(*current++);
  }
  while ( blank_len-- ) {
    _SPI.transfer(0);
  }

  //csn(HIGH);
  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();

  return status;
}

bool RF24::begin(void)
{

  uint8_t setup = 0;
  pinMode(ce_pin, OUTPUT);
  pinMode(csn_pin, OUTPUT);

  _SPI.begin();
  digitalWrite(ce_pin, LOW);
  //csn(HIGH);
  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);

  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  delay( 5 ) ;

  // Reset NRF_CONFIG and enable 16-bit CRC.
  write_register( NRF_CONFIG, 0x0C ) ;

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  //setRetries(5,15);
  write_register(SETUP_RETR, (5 & 0xf) << ARD | (15 & 0xf) << ARC);

  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;

  // check for connected module and if this is a p nRF24l01 variant
  //
  if ( setDataRate( RF24_250KBPS ) )
  {
    p_variant = true ;
  }
  setup = read_register(RF_SETUP);
  /*if( setup == 0b00001110 )     // register default for nRF24L01P
    {
    p_variant = true ;
    }*/

  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  //setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  toggle_features();
  write_register(FEATURE, 0 );
  write_register(DYNPD, 0);
  dynamic_payloads_enabled = false;

  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(NRF_STATUS, 1 << RX_DR | 1 << TX_DS | 1 << MAX_RT );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  //setChannel(76);
  const uint8_t max_channel = 125;
  write_register(RF_CH, rf24_min(76, max_channel));

  spiTrans( FLUSH_RX );
  spiTrans( FLUSH_TX );

  powerUp(); //Power up by default when begin() is called

  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~1 << PRIM_RX );

  // if setup is 0 or ff then there was no response from module
  return ( setup != 0 && setup != 0xff );
}

void RF24::startListening(void)
{
  powerUp();
  write_register(NRF_CONFIG, read_register(NRF_CONFIG) | 1 << PRIM_RX);
  write_register(NRF_STATUS, 1 << RX_DR | 1 << TX_DS | 1 << MAX_RT );
  digitalWrite(ce_pin, HIGH);
  // Restore the pipe0 adddress, if exists
  if (pipe0_reading_address[0] > 0) {
    write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
  } else {
    closeReadingPipe(0);
  }

  // Flush buffers
  //flush_rx();
  if (read_register(FEATURE) & 1 << EN_ACK_PAY)
    spiTrans( FLUSH_TX );

  // Go!
  //delayMicroseconds(100);
}

void RF24::stopListening(void)
{
  digitalWrite(ce_pin, LOW);

  delayMicroseconds(txDelay);

  if (read_register(FEATURE) & 1 << EN_ACK_PAY) {
    delayMicroseconds(txDelay); //200
    spiTrans( FLUSH_TX );
  }
  //flush_rx();
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~1 << PRIM_RX );
  write_register(EN_RXADDR, read_register(EN_RXADDR) | 1 << pgm_read_byte(&child_pipe_enable[0])); // Enable RX on pipe0

  //delayMicroseconds(100);
}

void RF24::powerDown(void)
{
  digitalWrite(ce_pin, LOW); // Guarantee CE is low on powerDown
  write_register(NRF_CONFIG, read_register(NRF_CONFIG) & ~1 << PWR_UP);
}

void RF24::toggle_features(void)
{
  //beginTransaction();
  _SPI.beginTransaction(SPISettings(RF24_SPI_SPEED, MSBFIRST, SPI_MODE0));
  //csn(LOW);
  digitalWrite(csn_pin, LOW);
  delayMicroseconds(csDelay);
  _SPI.transfer( ACTIVATE );
  _SPI.transfer( 0x73 );
  //csn(HIGH);
  digitalWrite(csn_pin, HIGH);
  delayMicroseconds(csDelay);
  _SPI.endTransaction();
}
